refactor: improve error handling and refactor ChatbotController, ChatbotService, ChatbotUtils, and QARepository for better maintainability